--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "upt"
-version = "0.9.0"
-edition = "2021"
-authors = ["sigoden <sigoden@gmail.com>"]
+version = "1.0.0"
+edition = "2025"
+authors = ["xeddmc"]
 description = "Universal package management tool for any OS"
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/sigoden/upt"
-repository = "https://github.com/sigoden/upt"
+homepage = "https://github.com/xeddmc/upt"
+repository = "https://github.com/xeddmc/upt"
 categories = ["command-line-utilities"]
 keywords = ["universal", "package", "management"]
 
 [dependencies]
-which = "6.0.1"
+which = "6.0.3"  # Updated to latest version
 
 [profile.release]
 lto = true
